Align fix

--- a/Exercise2/style.scss
+++ b/Exercise2/style.scss
@@ -29,3 +29,8 @@ img{
 	width:100%;
 	height: auto;
 }
+.space{
+	width: 100%;
+	float: left;
+	height: 1px;
+}
